# key-mgmt-demo

./: .gitignore  Cargo.toml  README.md  build-key-server.sh  dams-generate.sh  dams-register.sh  delete_secret.sh  list_keys.sh  register.sh  retrieve.sh  run-key-server.sh
.github/workflows/: rust.yml
dev/: Client.toml  Server.toml
src/: client.rs  main.rs
