[package]
name = "key-mgmt-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dams-client = { git = "https://github.com/boltlabs-inc/key-mgmt.git", branch = "main", features=["allow_explicit_certificate_trust"]}
dams = { git = "https://github.com/boltlabs-inc/key-mgmt.git", branch = "main" }
futures = "0"
rand = "0"
structopt = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-futures = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
kv = "^0.24"
hex = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"